Removed age_in_days column, added birthday column on Pets. Updated in views, controller, etc. Added bootstrap-datepicker for selecting birthday.

--- a/test/fixtures/pets.yml
+++ b/test/fixtures/pets.yml
@@ -2,12 +2,12 @@
 
 one:
   name: MyString
-  age_in_days: 
+  birthday: 
   gender_id: 1
   image_id: 1
 
 two:
   name: MyString
-  age_in_days: 
+  birthday: 
   gender_id: 1
   image_id: 1
