--- a/test/fixtures/pets.yml
+++ b/test/fixtures/pets.yml
@@ -8,9 +8,9 @@ spot:
   species_id: 1
   image:
 
-fluffy:
+future_bday_cat:
   name: Fluffy
-  birthday: 2009-08-01
+  birthday: 2100-08-01
   gender_id: 1
   user_id: 2
   species_id: 2
